# python-project-lvl4

./: .gitignore  Makefile  Procfile  README.md  db.sqlite3  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: linter_test_check.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: custom_views.py  settings.py  urls.py  views_for_login.py
task_manager/labels/: tests.py  views.py
task_manager/statuses/: tests.py  views.py
task_manager/tasks/: admin.py  forms.py  models.py  tasks_filter.py  tests.py  views.py
task_manager/templates/labels/: label_delete.html
task_manager/templates/statuses/: status_delete.html
task_manager/templates/tasks/: task_delete.html  task_details.html  tasks_list.html
task_manager/templates/users/: user_delete.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
